--- a/setup.cfg
+++ b/setup.cfg
@@ -16,8 +16,8 @@ keywords =
     setup
     distutils
 
-[global]
-commands = demoparser._setup_hooks.ProtobufBuilder
+#[global]
+#commands = demoparser._setup_hooks.ProtobufBuilder
 
 [files]
 packages =
